# findr

./: Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: tests.yml
findr/: __main__.py  cli.py  search.py
pyfindr/: cli.py
