[tool.poetry]
name = "findr"
version = "0.3"
description = "Recursively search files"
license = "GPL-2.0-only"
authors = [
    "Julio Cabria <juliocabria@tutanota.com>",
    "Alejandro Gonzalez Momblan <agelrenorenardo@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/Julynx/argsdict"

[tool.poetry.dependencies]
python = "^3.8"
argsdict = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
