[tool.poetry]
name = "findr"
version = "0.3"
description = "Recursively search files"
license = "GPL-2.0-only"
authors = [
    "Julio Cabria <juliocabria@tutanota.com>",
    "Alejandro Gonzalez Momblan <agelrenorenardo@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/Julynx/argsdict"

[tool.poetry.dependencies]
python = "^3.8"
argsdict = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
mypy = "^1.11.1"
bandit = "^1.7.9"
pydoctest = "^0.2.0"

[tool.poetry.scripts]
findr = "findr.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
